# dominion-grading

./: pyproject.toml
.github/workflows/: dashboard-update.yml  validate.yml
docs/: dashboard.js  data.json  index.html  style.css
milestones/: definitions.json
scripts/: format_comment.py  update_dashboard.py  validate_submission.py
templates/: comment_template.md
tests/bugs/: test_bug_controller_params.py  test_bug_estate_supply.py  test_bug_prompt_formatting.py  test_fixme_bureaucrat_silver_check.py  test_fixme_discard_validation.py  test_fixme_draw_limit.py  test_fixme_treasure_to_played.py
tests/cards/: test_gardens.py  test_laboratory.py  test_witch.py
