[project]
name = "dominion-grading"
version = "0.1.0"
description = ""
authors = [
    {name = "Claire Le Goues",email = "clegoues@cs.cmu.edu"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "coverage (>=7.9.1,<8.0.0)",
    "blessed (>=1.21.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.1"

